Slight tweak to auth and home page

--- a/src/Coalesce.Starter.Web/Views/Home/Index.cshtml
+++ b/src/Coalesce.Starter.Web/Views/Home/Index.cshtml
@@ -7,10 +7,6 @@
 
     <h1 class="thin" style="text-transform: lowercase; text-align: center">
         welcome to your new application, @(User.Identity.Name)!
-        <br />
-        <small>
-            below you will find links to your coalesce-generated views.
-        </small>
     </h1>
     <br />
     <h3>Here are the next steps to get started with your new Coalesce application:</h3>
@@ -29,6 +25,11 @@
             and Windows Authentication (enabled in the Debug tab of the properties of your Web project.)
         </li>
     </ol>
+    <h1 class="thin" style="text-transform: lowercase; text-align: center">
+        <small>
+            below you will find links to your coalesce-generated views.
+        </small>
+    </h1>
     <br />
     <style>
         .admin-container {
