--- a/src/Coalesce.Starter.Web/Coalesce/Originals/Templates/LocalBaseApiController.cshtml
+++ b/src/Coalesce.Starter.Web/Coalesce/Originals/Templates/LocalBaseApiController.cshtml
@@ -2,7 +2,7 @@
 @using IntelliTect.Coalesce.TypeDefinition
 @using Microsoft.VisualStudio.Web.CodeGeneration
 @{
-    ModelType contextInfo = Model.ContextInfo;
+    ContextInfo contextInfo = Model.ContextInfo;
     string namespaceName = Model.Namespace;
     if (!string.IsNullOrWhiteSpace(Model.AreaName))
     {
@@ -14,7 +14,7 @@ using IntelliTect.Coalesce.Controllers;
 using @contextInfo.Namespace;
 @foreach (var ns in ReflectionRepository.Namespaces.Where(f => f != "System"))
 {
-    @:using @ns;
+@:using @ns;
 }
 using IntelliTect.Coalesce.Interfaces;
 
