--- a/src/Coalesce.Starter.Web/Coalesce/Templates/KoExternalType.cshtml
+++ b/src/Coalesce.Starter.Web/Coalesce/Templates/KoExternalType.cshtml
@@ -24,7 +24,7 @@
 
 module @moduleName {
     // *** External Type @(model.Name)
-    export class @(model.ViewModelClassName)
+    export class @(model.ViewModelGeneratedClassName)
     {
         @if (model.PrimaryKey != null)
         {
